--- a/src/components/Auditoriums/Booking/SeatInformation/seatInformation.css
+++ b/src/components/Auditoriums/Booking/SeatInformation/seatInformation.css
@@ -2,8 +2,12 @@
     display: flex;
     flex-direction: column;
     row-gap: 25px;
-    width: 380px;
-    padding: 0 15px 15px 15px;
+    width: 400px;
+    padding: 10px 30px 30px;
+    background: linear-gradient( rgba(0, 0, 0, 0.98), rgba(0, 0, 0, 0.01), rgba(0, 0, 0, 0.98) ), url("/public/sign_pic_3.jpg");
+    background-size: cover;
+    color: #fff;
+    border-radius: 18px;
 }
 .comupter__num {
     padding: 15px 0px;
@@ -13,8 +17,8 @@
     justify-content: center;
     align-items: center;
     height: 200px;
-    border: 1px solid #323232;
-    border-radius: 2px;
+    border: 1px solid #d91e37;
+    border-radius: 5px;
 }
 .computer__info {
     display: flex;
@@ -22,12 +26,13 @@
     row-gap: 10px;
 }
 .continue__btn {
-    border: 1px solid #323232;
+    border: 1px solid #d91e37;
+    border-radius: 20px;
     max-width: 200px;
     padding: 10px;
     transition: 0.3s all;
 }
 .continue__btn:hover {
-    background-color: black;
+    background-color: #d91e37;
     color: #fff;
 }
