--- a/src/components/HeaderText/headerText.css
+++ b/src/components/HeaderText/headerText.css
@@ -21,36 +21,47 @@
 .btn_seats{
     padding: 8px 20px;
     border-radius: 20px;
-    border: 2px solid #00a700;
+    /* border: 2px solid #00a700; */
+    border: 2px solid #d91e37;
     transition: 0.3s ease-in-out;
     color: #fff;
 }
 a:hover {
     color: #fff; /* Цвет текста при наведении */
-    border: 2px solid #00a700; /* Цвет границы при наведении */
-    background-color: #00ff00; /* Цвет фона при наведении */
+    /* border: 2px solid #00a700; Цвет границы при наведении */
+    /* background-color: #00ff00; Цвет фона при наведении */
+    border: 2px solid #d91e37; /* Цвет границы при наведении */
+    background-color: #d91e37;
   }
 /* .btn__seats:hover {
     background-color: #00ff00;
     color: #fff;
 } */
 .scroll{
-    position: fixed;
-    bottom: 16px;
+    /* position: fixed; */
+    /* top: 0;
+    left: 0;
+    bottom: 16px; */
     /* flex-direction: column;
     align-items: center;
     justify-content: center; */
-    z-index: 99;
-    display: inline-block;
-    width: 102px;
+    /* z-index: 99; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transition: opacity 0.3s ease-in-out;
+    width: 100%;
     text-align: center;
     left: 50%;
-    margin-left: -50px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 25vh;
 }
 .scroll .scroll_pic{
     display: inline-block;
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     background-image: url("/public/scroll2.png");
     background-size: cover;
 }
@@ -59,4 +70,8 @@ a:hover {
     font-size: 12px;
     line-height: 160%;
     color: #fff;
+}
+.scroll-hidden{
+    opacity: 0;
+    transform: translate(0, 10%);
 }
